--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <title>Yazid sefsaf</title>
 </head>
@@ -16,9 +17,11 @@
                 <!--card left-->
                 <div class="card-left">
                     <!--image-->
-                    <img src="src/images/yazidpicture.jpg" class="image" alt="">
+                    <div class="image">
+                    <img src="src/images/thumbnail.jpeg" class="image" height="auto" width="auto" alt="">
+                    </div>
                     <span class="social-media">
-                        <a href="https://www.linkedin.com/in/yazid-sefsaf-7b1b3b1b1/" class="social-media-link">
+                        <a href="https://www.linkedin.com/in/yazid-sefsaf-7b1b3b1b1/"  class="social-media-link">
                             <i class="fab fa-linkedin"></i>
                         </a>
                         <a href="https://github.com/yazidsef" class="social-media-link">
@@ -38,19 +41,19 @@
                     </div>
                     <div class="card-right-bottom">
                      <h3>SKILLS</h3>
-                        <img src="src/images/php.svg" alt="php">
-                        <img src="src/images/symfony.svg" alt="Symfony">
-                        <img src="src/images/js.svg" alt="javascript">
-                        <img src="src/images/html.svg" alt="html">
-                        <img src="src/images/css.svg" alt="css">
-                        <img src="src/images/bootstrap.svg" alt="bootstrap">
-                        <img src="src/images/github.svg" alt="github">
-                        <img src="src/images/git.svg" alt="git">
-                        <img src="src/images/vscode.svg" alt="vscode">
-                        <img src="src/images/linux.svg" alt="linux">
-                        <img src="src/images/figma.svg" alt="figma">
-                        <img src="src/images/fleche.svg" alt="mysql">
-                        <img src="src/images/docker.svg" alt="docker">
+                        <img src="src/images/php.svg" alt="php" title="php">
+                        <img src="src/images/symfony.svg" alt="Symfony" title="Symfony">
+                        <img src="src/images/js.svg" alt="javascript" title="javascript">
+                        <img src="src/images/html.svg" alt="html" title="html">
+                        <img src="src/images/css.svg" alt="css" title="css">
+                        <img src="src/images/bootstrap.svg" alt="bootstrap" title="Bootsrap">
+                        <img src="src/images/github.svg" alt="github" title="github">
+                        <img src="src/images/git.svg" alt="git" title="git">
+                        <img src="src/images/vscode.svg" alt="vscode" title="vscode">
+                        <img src="src/images/linux.svg" alt="linux" title="linux">
+                        <img src="src/images/figma.svg" alt="figma" title="figma">
+                        <img src="src/images/fleche.svg" alt="mysql" title="mysql">
+                        <img src="src/images/docker.svg" alt="docker" title="docker">
                     </div>
                 </div>
             </div>
