--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         
         <section class="projets">
             <div class="container-left">
-                <a href="https://darling-moonbeam-4d37b2.netlify.app/?fbclid=IwZXh0bgNhZW0CMTAAAR1W8YsfhJZ_2bZaaMZJSr9hgO5mpm_2AHuB_fLkZopijYU0sQT4eBDwFzQ_aem_X12XF4GZECszbAwVmZwe3g" class="lien">
+                <a href="https://lapic-prod.netlify.app/" class="lien">
                     <h3>Lopic Prod</h3>
                     <img src="./src/images/image.png" alt="logo de projet">
                 </a>
